--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
-    "mongoose": "^8.0.0",
-    "vercel": "^32.5.0"
+    "mongoose": "^8.0.0"
   }
 }
